<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyActivity">

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/joinGame"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:onClick="OnCreateGame"
        android:text="@string/create" />

    <Button
        android:id="@+id/joinGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView4"
        android:layout_alignStart="@id/createButton"
        android:layout_alignLeft="@id/createButton"
        android:layout_alignEnd="@id/createButton"
        android:layout_alignRight="@id/createButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:onClick="OnJoinGame"
        android:text="@string/Join" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descri"
        android:src="@drawable/splash" />

    <Spinner
        android:id="@+id/sizeSpinnerOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createButton"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp" />

</RelativeLayout>