<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onNewGame"
    tools:context=".GameOverActivity">


    <Button
        android:id="@+id/buttonReplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="onNewGame"
        android:text="@string/replayButton" />

    <TextView
        android:id="@+id/textViewGameOver"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:textSize="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:background="#00801111"
        android:gravity="center"
        android:text="@string/gameOver"
        app:autoSizeMaxTextSize="@android:dimen/notification_large_icon_width"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/textViewWinner"
        android:textSize="30sp"
        android:textColor="#4B0082"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_below="@id/textViewGameOver"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="114dp"
        android:layout_marginRight="0dp"
        android:gravity="clip_horizontal|center|clip_vertical|center_vertical"
        android:text="@string/winnerText" />

</RelativeLayout>